--- a/package.json
+++ b/package.json
@@ -1,37 +1,44 @@
 {
-  "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/bottom-tabs": "^6.4.0",
-    "@react-navigation/native": "^6.0.13",
-    "@react-navigation/stack": "^6.3.4",
-    "expo": "^47.0.0",
-    "expo-asset": "~8.6.2",
-    "expo-constants": "~14.0.2",
-    "expo-font": "~11.0.1",
-    "expo-linking": "~3.2.3",
-    "expo-splash-screen": "~0.17.4",
-    "expo-status-bar": "~1.4.2",
-    "expo-web-browser": "~12.0.0",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-gesture-handler": "~2.8.0",
-    "react-native-reanimated": "~2.12.0",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
-    "react-native-web": "~0.18.7"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.19.3"
-  },
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "version": "1.0.0",
-  "private": true,
-  "name": "happnin"
+	"dependencies": {
+		"@expo/vector-icons": "^13.0.0",
+		"@react-native-community/masked-view": "^0.1.11",
+		"@react-navigation/bottom-tabs": "^6.4.0",
+		"@react-navigation/native": "^6.0.13",
+		"@react-navigation/stack": "^6.3.4",
+		"@types/react-native": "~0.70.6",
+		"expo": "^47.0.0",
+		"expo-asset": "~8.6.2",
+		"expo-constants": "~14.0.2",
+		"expo-font": "~11.0.1",
+		"expo-linking": "~3.2.3",
+		"expo-splash-screen": "~0.17.4",
+		"expo-status-bar": "~1.4.2",
+		"expo-web-browser": "~12.0.0",
+		"react": "18.1.0",
+		"react-dom": "18.1.0",
+		"react-native": "0.70.5",
+		"react-native-gesture-handler": "~2.8.0",
+		"react-native-reanimated": "~2.12.0",
+		"react-native-safe-area-context": "4.4.1",
+		"react-native-screens": "~3.18.0",
+		"react-native-web": "~0.18.7"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.19.3",
+		"@tsconfig/react-native": "^2.0.3",
+		"@types/jest": "^29.2.5",
+		"@types/react": "^18.0.26",
+		"@types/react-test-renderer": "^18.0.0",
+		"typescript": "^4.9.4"
+	},
+	"scripts": {
+		"start": "expo start",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo start --web",
+		"all": "react-native run-android && react-native run-ios"
+	},
+	"version": "1.0.0",
+	"private": true,
+	"name": "happnin"
 }
